feat: integrate ECS OTEL for tracing with ADOT sidecar to x-ray

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 HELLO_SERVICE_URL = "http://hello-service:5000"
 WORLD_SERVICE_URL = "http://world-service:5001"
+OTEL_EXPORTER_OTLP_ENDPOINT = "http://localhost:4317"
