--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-flask==3.0.1
-requests==2.28.1
+flask
+requests
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
+opentelemetry-sdk-extension-aws
+grpcio
